--- a/config/astra_vein_receptionist.json5
+++ b/config/astra_vein_receptionist.json5
@@ -50,12 +50,12 @@
     "config": {
       "agent_name": "AstraVein receptionist",
       "base_url": "http://localhost:11434",
-      "model": "llama3:latest",
-      "temperature": 0.8,
+      "model": "gemma2:2b",            // Faster, better at following instructions, less repetition
+      "temperature": 0.7,              // Slightly lower for more focused responses
       "timeout": 60,
-      "history_length": 10,           // Remember last 10 exchanges to avoid repetition
-      "repeat_penalty": 1.3,           // Higher penalty to discourage repeating responses
-      "frequency_penalty": 0.5         // Penalize frequently used phrases
+      "history_length": 10,            // Remember last 10 exchanges to avoid repetition
+      "repeat_penalty": 1.4,           // Higher penalty to discourage repeating responses
+      "frequency_penalty": 0.6         // Penalize frequently used phrases more strongly
     }
   },
 
