feat: integrate face emotion detection with Lex Channel Chief
- Add FaceEmotionCapture vision plugin using DeepFace for emotion recognition
- Integrate face detection into lex_channel_chief config with 30s polling
- Update webcam_to_face_emotion to only report when person detected (no spam)
- Add Vision keyword to formatted output for proper Fuser detection
- Install deepface and tf-keras dependencies
- Create multiple test configs for vision system validation
- Add lightweight face detection alternatives for memory-constrained deployment
- Memory footprint: ~2GB total (gemma2:2b + DeepFace + faster-whisper)
- Vision triggers compliment + introduction + LinkedIn photo request workflow
- Audio input remains responsive, vision non-intrusive when no person present

--- a/config/lex_channel_chief.json5
+++ b/config/lex_channel_chief.json5
@@ -33,16 +33,11 @@
       }
     },
     {
-      "type": "VLMOllamaVision",
-      "config": {
-        "base_url": "http://localhost:11434",
-        "model": "llava-llama3",
-        "camera_index": 0,
-        "poll_interval": 10.0,
-        "analysis_interval": 10.0,
-        "timeout": 15,
-        "prompt": "Describe the person or people you see, focusing on positive, compliment-worthy aspects. Note: professional appearance, style choices, confident demeanor, friendly expressions, interesting clothing or accessories, overall presence. Describe their body language and engagement level. Mention if they look approachable, professional, tech-savvy, or have any standout style elements that could be complimented.",
-        "descriptor": "Person Detection"
+      type: "FaceEmotionCapture", 
+      config: {
+        camera_index: 0,
+        poll_interval: 30.0,
+        descriptor: "Face Detection with Emotion Recognition"
       }
     }
   ],
@@ -51,7 +46,7 @@
     "config": {
       "agent_name": "Lex Channel Chief",
       "base_url": "http://localhost:11434",
-      "model": "llama3.1:8b",
+      "model": "gemma2:2b",
       "temperature": 0.3,
       "timeout": 15,
       "history_length": 5,
