--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "jinja2>=3.1.6",
     "psutil>=7.1.1",
     "python-multipart>=0.0.20",
+    "deepface>=0.0.95",
+    "tf-keras>=2.20.1",
 ]
 
 [dependency-groups]
