--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "deepface>=0.0.95",
     "tf-keras>=2.20.1",
+    "pytesseract>=0.3.13",
 ]
 
 [dependency-groups]
