feat: cross-platform deployment with comprehensive audio validation
Major improvements:
- 🌍 Language switching fix (llama3.1:8b + fallback for reliable JSON)
- 🎤 Sample rate auto-detection from device_config.yaml
- 🤖 Jetson Orin audio validation system (ALSA + PulseAudio)
- ✅ Pre-start validation with exit on failure
- 📚 Enhanced diagnostics with 600+ line troubleshooting guide
- 🧹 Cross-platform .gitignore (UV, venv, platform artifacts)
- 📖 Complete installation & deployment documentation (2000+ lines)

Files added (16):
- INSTALL_AND_RUN.md - Comprehensive setup guide (START HERE)
- DEPLOYMENT_CHECKLIST.md - Step-by-step deployment workflow
- DEPLOYMENT_READY.md - Final deployment summary
- git_cleanup.sh - Automated cleanup script
- quick_push.sh - Interactive push helper
- diagnostics_audio.py - Enhanced Jetson-aware diagnostics
- src/utils/audio_config.py - Smart audio device detection
- src/utils/audio_validation.py - Pre-start validation system
- documentation/troubleshooting/JETSON_ORIN_AUDIO_GUIDE.md (600+ lines)
- AUDIO_CONFIG.md, AUDIT_SUMMARY.md, IMPLEMENTATION_STATUS.md
- JETSON_AUDIO_VALIDATION_SUMMARY.md, LANGUAGE_SWITCHING_FIX.md
- JETSON_DEPLOY.md, QUICKREF.md, start_astra_agent.py

Key changes:
- config/astra_vein_receptionist.json5: llama3.1:8b (was 3.2:3b)
- src/llm/function_schemas.py: Language field fallback (defaults to 'en')
- src/inputs/plugins/local_asr.py: Load sample rate from device_config.yaml
- src/run.py: Pre-start audio validation (aborts if failed)
- .gitignore: Enhanced for UV and cross-platform artifacts

Platform compatibility:
✅ macOS (Apple Silicon) - Tested, language switching verified
✅ Jetson Orin (ARM64 Linux) - Ready for testing with full diagnostics

Testing performed:
- Audio device detection working (USB PnP Sound Device on device 1)
- Language switching verified ('language': 'es', 'en', 'ru')
- Sample rate correctly loaded (48000 Hz on macOS)
- Agent startup validation functional
- Comprehensive diagnostics script test

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,22 @@ wheels/
 .ruff_cache/
 .pytest_cache/
 
-# Virtual environments
-.venv
+# Virtual environments (cross-platform)
+.venv/
+venv/
+.uv/
+env/
+ENV/
+.Python
+
+# UV package manager
+.uv/
+uv.lock
+*.uv-cache/
 
 # Environment variables
 .env
+.env.local
 *.lock
 
 # IDE
@@ -42,8 +53,12 @@ front_image.jpg
 turtlebot4_debug.jpg
 turtlebot.jpg
 
-# Mac specific lint
+# OS-specific files
 .DS_Store
+Thumbs.db
+*.swp
+*.swo
+*~
 config/iris_ai.json
 launch.sh
 
@@ -52,6 +67,10 @@ launch.sh
 
 # Logs
 logs/
+*.log
+
+# Generated config files (platform-specific)
+device_config.yaml
 
 # Data files
 *.jsonl
