feat: camera detection, Ollama management, and auto-start service
- Camera auto-detection (Intel RealSense D435i)
- Ollama cache clearing and restart in diagnostics
- Systemd service for auto-start on Jetson boot
- Updated diagnostics to full system check
- Installation script for auto-start setup

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,10 @@ uv.lock
 piper_voices/*.onnx
 piper_voices/*.onnx.json
 
+# Device configuration files (platform-specific)
+device_config.yaml
+camera_config.yaml
+
 # Audio output
 audio_output/
 tmp_audio/
