feat: add comprehensive LLM validation before agent startup
PROBLEM: On 2 different Linux machines, getting 'no output from LLM' errors
SOLUTION: Pre-start LLM validation to catch issues before agent runs

NEW FEATURES:

1. LLM Validation Utility (src/utils/llm_validation.py):
   - check_ollama_service() - Verify Ollama is running
   - start_ollama_service() - Auto-start if not running
   - check_model_exists() - Verify model is downloaded
   - test_ollama_model() - Send test prompt, verify response
   - validate_llm_before_start() - Comprehensive pre-flight check
   - log_llm_troubleshooting_tips() - Detailed error guidance

2. Integrated into Agent Startup (src/run.py):
   - Runs before audio validation
   - Extracts model name from config (e.g., llama3.1:8b)
   - Tests model with 20s timeout
   - Exits with code 2 if validation fails
   - Can be skipped with: SKIP_LLM_VALIDATION=true

3. Added to Diagnostics (diagnostics_audio.py):
   - Step 1b: LLM Inference Test
   - Tests model responds to 'Reply with just OK'
   - Shows troubleshooting tips if fails

4. Systemd Service Enhancement (astra_agent.service):
   - ExecStartPre tests model before starting agent
   - Prevents startup with broken/corrupted LLM
   - Fails fast if model won't load

VALIDATION CHECKS:
✅ Ollama service running (systemctl or curl check)
✅ Model downloaded (ollama list)
✅ Model loads successfully (ollama run test)
✅ Model responds correctly (checks output)

ERROR DETECTION:
❌ Model not found → 'ollama pull llama3.1:8b'
❌ Service not running → Auto-start with systemctl
❌ Model timeout → Corrupted cache or insufficient RAM
❌ Test fails → Detailed troubleshooting guide

BENEFITS:
- Catches LLM issues BEFORE agent starts
- Prevents 'no output from LLM' during operation
- Auto-fixes common issues (starts service)
- Clear error messages with actionable fixes
- Works offline (no cloud dependencies)

USAGE:
# Normal startup (LLM validation enabled)
uv run src/run.py astra_vein_receptionist

# Skip 

--- a/astra_agent.service
+++ b/astra_agent.service
@@ -22,13 +22,16 @@ ExecStartPre=/bin/sleep 15
 ExecStartPre=/bin/bash -c "systemctl is-active ollama || sudo systemctl start ollama"
 ExecStartPre=/bin/sleep 5
 
+# Test Ollama model before starting agent (prevents startup with broken LLM)
+ExecStartPre=/bin/bash -c "timeout 20 ollama run llama3.1:8b 'Reply OK' || exit 1"
+
 # Clear stale audio configs
 ExecStartPre=/bin/bash -c "cd /home/ubuntu/Downloads/roboai-espeak/roboai-espeak-main && rm -f device_config.yaml"
 
 # Verify audio devices are available
 ExecStartPre=/bin/bash -c "timeout 10 arecord -l || exit 0"
 
-# Start agent (no diagnostics - they block startup)
+# Start agent (LLM validation enabled by default in run.py)
 ExecStart=/home/ubuntu/.local/bin/uv run /home/ubuntu/Downloads/roboai-espeak/roboai-espeak-main/src/run.py astra_vein_receptionist
 
 # Restart on failure
