--- a/config/astra_vein_receptionist.json5
+++ b/config/astra_vein_receptionist.json5
@@ -53,13 +53,13 @@
   "agent_name": "AstraVein receptionist",
   "base_url": "http://localhost:11434",
   "model": "llama3.1:8b",          // More reliable for multi-language JSON (llama3.2:3b has issues)
-  "temperature": 0.6,              // SPEED OPTIMIZED: 0.6 (was 0.7) = more focused, faster
+  "temperature": 0.7,              // Increased for better language switching (was 0.6)
   "timeout": 20,                   // SPEED OPTIMIZED: 20s (was 30s) = fail faster if stuck
-  "history_length": 3,             // SPEED OPTIMIZED: 3 (was 5) = less context = faster inference
+  "history_length": 5,             // Increased for language context (was 3) - LLM needs to remember language switch
   "repeat_penalty": 1.3,
   "frequency_penalty": 0.5,
-  "max_tokens": 100,               // SPEED OPTIMIZED: 100 (was 150) = shorter responses = faster
-  "num_predict": 100               // SPEED OPTIMIZED: Limit generation to 100 tokens max
+  "max_tokens": 150,               // Increased to 150 (was 100) - need more tokens for multi-language responses
+  "num_predict": 150               // Increased to 150 - allows full Spanish/Russian sentences
     }
   },
 
